--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -58,10 +58,6 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
-    # Execute all unit tests in the solution
-    - name: Execute unit tests
-      run: dotnet test
-
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
       run: msbuild $env:Wap_Project_Path /t:Restore /p:Configuration=$env:Configuration
@@ -70,7 +66,7 @@ jobs:
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
-      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle
+      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration
       env:
         Appx_Bundle: Always
         Appx_Bundle_Platforms: x86|x64
@@ -82,4 +78,4 @@ jobs:
       uses: actions/upload-artifact@v4.3.6
       with:
         name: MSIX Package
-        path: ${{ env.Wap_Project_Directory }}\bin\Release\net8.0
+        path: ${{ env.Solution_Name }}\bin\Release\net8.0
